Refined swagger settings
